--- a/HospitalMVC/HospitalMVC.csproj
+++ b/HospitalMVC/HospitalMVC.csproj
@@ -44,10 +44,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Runtime.Serialization" />
@@ -378,7 +378,9 @@
     <Compile Include="Controllers\DepartmanController.cs" />
     <Compile Include="Controllers\DoctorController.cs" />
     <Compile Include="Controllers\PrescriptionController.cs" />
+    <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Controllers\SickController.cs" />
+    <Compile Include="Controllers\UserssController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -443,6 +445,12 @@
     <Content Include="Views\Prescription\Yeni.cshtml" />
     <Content Include="Views\Sick\Index.cshtml" />
     <Content Include="Views\Sick\Yeni.cshtml" />
+    <Content Include="Views\Userss\Create.cshtml" />
+    <Content Include="Views\Userss\Delete.cshtml" />
+    <Content Include="Views\Userss\Details.cshtml" />
+    <Content Include="Views\Userss\Edit.cshtml" />
+    <Content Include="Views\Userss\Index.cshtml" />
+    <Content Include="Views\Security\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
