--- a/HospitalMVC/Web.config
+++ b/HospitalMVC/Web.config
@@ -22,6 +22,11 @@
 			  
 		  </forms>
 	  </authentication>
+	  <roleManager enabled="true" defaultProvider="testRoleProvider">
+		  <providers>
+			  <add name="testRoleProvider" type="HospitalMVC.Security.HospitalRoleProvider"/>
+		  </providers>
+	  </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
