--- a/HospitalMVC/HospitalMVC.csproj
+++ b/HospitalMVC/HospitalMVC.csproj
@@ -418,6 +418,7 @@
       <DependentUpon>HospitalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\HospitalRoleProvider.cs" />
     <Compile Include="ViewModels\AppointmentViewModel.cs" />
     <Compile Include="ViewModels\DoctorViewModel.cs" />
     <Compile Include="ViewModels\PrescriptionViewModel.cs" />
